--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>News Websites</title>
 </head>
 
 <body>
@@ -14,7 +15,8 @@
         <header>
             <nav class="header">
                 <img src="images/logo-black.png" alt="logo" class="header-logo">
-                <ul>
+                <button class="header-menu-burger" onclick="showMenu()"><i class="fa fa-bars"></i></button>
+                <ul class="header-menu" id="menu">
                     <li class="header-menu-item">
                         <a href="#" class="header-menu-item-link">NEWS</a>
                     </li>
@@ -31,19 +33,352 @@
                         <a href="#" class="header-menu-item-link">ICON CLAENDER</a>
                     </li>
                 </ul>
+                <section class="clear-fix"></section>
             </nav>
         </header>
+        <section class="content">
+
+            <section class="intro-h-600px">
+                <section class="intro-row intro-h-2-3 mb-10x">
+                    <section class="intro-2-3-col intro-h-100 position-relative h-md-300px">
+                        <section class="img-bg bg-1 intro-h-100"></section>
+                        <section class="intro-item-caption">
+                            <h3 class="caption-title">
+                                <span>
+                                    Peter Thiels VC Found Invests Million into Bitcoin, Market Reacts
+                                </span>
+                            </h3>
+                            <ul class="caption-info-bar">
+                                <li>by<b class="text-yellow">Olivia Capzallo</b> Jan 25, 2021 </li>
+                                <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                <li><i class="fa fa-comments text-yellow"></i>30</li>
+                            </ul>
+                        </section>
+                    </section>
+                    <section class="intro-1-3-col intro-h-100">
+                        <section class="intro-1-3-item intro-h-50 position-relative h-md-300px">
+                            <section class="img-bg bg-2 intro-h-100"></section>
+                            <section class="intro-item-caption">
+                                <h3 class="caption-title">
+                                    <b>
+                                        Russians Bisiops Condems Cryptocurrecy
+                                    </b>
+                                </h3>
+                                <ul class="caption-info-bar">
+                                    <li>Jan 25, 2018 </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>30</li>
+                                </ul>
+                            </section>
+                        </section>
+
+                        <section class="intro-1-3-item intro-h-50 position-relative h-md-300px">
+                            <section class="img-bg bg-3 intro-h-100"></section>
+                            <section class="intro-item-caption">
+                                <h3 class="caption-title">
+                                    <b>
+                                        Bitcoin Adoption by Business in 2017
+                                    </b>
+                                </h3>
+                                <ul class="caption-info-bar">
+                                    <li>Jan 25, 2018 </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>30</li>
+                                </ul>
+                            </section>
+                        </section>
+                    </section>
+                    <section class="clear-fix"></section>
+                </section>
+
+                <section class="intro-row intro-h-1-3">
+                    <section class="intro-1-3-col-item intro-h-100 position-relative h-md-300px">
+                        <section class="img-bg bg-4 intro-h-100"></section>
+                        <section class="intro-item-caption">
+                            <h3 class="caption-title">
+                                <b>
+                                    2017 Market Performance: Crypto vs.Stock
+                                </b>
+                            </h3>
+                            <ul class="caption-info-bar">
+                                <li>Jan 25, 2018 </li>
+                                <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                <li><i class="fa fa-comments text-yellow"></i>30</li>
+                            </ul>
+                        </section>
+                    </section>
+                    <section class="intro-1-3-col-item intro-h-100 position-relative h-md-300px">
+                        <section class="img-bg bg-5 intro-h-100"></section>
+                        <section class="intro-item-caption">
+                            <h3 class="caption-title">
+                                <b>
+                                    Culture Stock: Bitcoin a Part of all Walks of life in 2017
+                                </b>
+                            </h3>
+                            <ul class="caption-info-bar">
+                                <li>Jan 25, 2018 </li>
+                                <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                <li><i class="fa fa-comments text-yellow"></i>30</li>
+                            </ul>
+                        </section>
+                    </section>
+                    <section class="intro-1-3-col-item intro-h-100 position-relative h-md-300px ">
+                        <section class="img-bg bg-6 intro-h-100"></section>
+                        <section class="intro-item-caption">
+                            <h3 class="caption-title">
+                                <b>
+                                    Bitcoin Billionares Hidding in Plain Sight
+                                </b>
+                            </h3>
+                            <ul class="caption-info-bar">
+                                <li>Jan 25, 2018 </li>
+                                <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                <li><i class="fa fa-comments text-yellow"></i>30</li>
+                            </ul>
+                        </section>
+                    </section>
+                    <section class="clear-fix"></section>
+                </section>
+
+            </section>
+
+            <section class="container">
+                <main class="main">
+                    <section class="main-news">
+                        <h2 class="title">
+                            RECENT NEWS
+                        </h2>
+                        <article>
+                            <img class="main-news-img" src="images/recent-news-1-600x450.jpg" alt="recent-news">
+                            <h3 class="article-title">
+                                <a href="#">
+                                    2017 Market Performance:
+                                    Crypto vs.Stock
+                                </a>
+                            </h3>
+                            <ul class="info-bar">
+                                <li>
+                                    <span class="text-muted">by</span>
+                                    <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                    <span>Jan 25, 2021</span>
+                                </li>
+                                <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                <li><i class="fa fa-comments text-yellow"></i>47</li>
+                            </ul>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
+                            </p>
+                        </article>
+                    </section>
+                    <section class="main-crypto-mining-news">
+                        <h2 class="title">
+                            CRYPTO MINING NEWS
+                        </h2>
+                        <section class="main-news-w-50">
+                            <article>
+                                <img class="main-news-img" src="images/crypto-news-2-600x450.jpg" alt="">
+                                <h3>
+                                    <a href="#">
+                                        2017 Market Performance:
+                                        Crypto vs.Stock
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span> Jan 25,2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </article>
+                        </section>
+                        <section class="main-news-w-50">
+                            <article>
+                                <img class="main-news-img" src="images/crypto-news-1-600x450.jpg" alt="">
+                                <h3>
+                                    <a href="#">
+                                        2017 Market Performance:
+                                        Crypto vs.Stock
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span> Jan 25,2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </article>
+                        </section>
+                        <section class="clear-fix"></section>
+                    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </main>
+
+                <aside class="sidebar">
+
+                    <section class="sidebar-item">
+                        <ul class="sidebar-list">
+                            <li><b>1 BTC = $13,2323</b></li>
+                            <li><b>1 BTC = $13,2323</b></li>
+                            <li><b>1 BTC = $13,2323</b></li>
+                            <li><b>1 BTC = $13,2323</b></li>
+                            <li><b>1 BTC = $13,2323</b></li>
+                            <li><b>1 BTC = $13,2323</b></li>
+                        </ul>
+                    </section>
+
+                    <section class="sidebar-item">
+                        <h2 class="title">
+                            POPULAR POSTS
+                        </h2>
+                        <section class="popular-post">
+                            <img class="popular-post-img" src="images/polular-1-100x100.jpg" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        <b>Bitcoin Billionares Hidding in Plain Sight</b>
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span>Jan 25, 2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </section>
+                            <div class="clear-fix"></div>
+                        </section>
+                        <section class="popular-post">
+                            <img class="popular-post-img" src="images/polular-2-100x100.jpg" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        <b>Bitcoin Billionares Hidding in Plain Sight</b>
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span>Jan 25, 2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </section>
+                            <div class="clear-fix"></div>
+                        </section>
+                        <section class="popular-post">
+                            <img class="popular-post-img" src="images/polular-3-100x100.jpg" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        <b>Bitcoin Billionares Hidding in Plain Sight</b>
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span>Jan 25, 2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </section>
+                            <div class="clear-fix"></div>
+                        </section>
+                        <section class="popular-post">
+                            <img class="popular-post-img" src="images/polular-4-100x100.jpg" alt="">
+                            <section class="popular-post-title">
+                                <h3>
+                                    <a href="#">
+                                        <b>Bitcoin Billionares Hidding in Plain Sight</b>
+                                    </a>
+                                </h3>
+                                <ul class="info-bar">
+                                    <li>
+                                        <span class="text-muted">by</span>
+                                        <a href="#" class="color-black"><b>OliviaCapzallo,</b></a>
+                                        <span>Jan 25, 2018</span>
+                                    </li>
+                                    <li> <i class="fa fa-bolt text-yellow"></i>30,190 </li>
+                                    <li><i class="fa fa-comments text-yellow"></i>47</li>
+                                </ul>
+                            </section>
+                            <div class="clear-fix"></div>
+                        </section>
+
+
+
+
+
+
+
+
+
+
+                    </section>
+
+                    <section class="sidebar-item">
+                        <h2 class="title">
+                            NEWSLETTER
+                        </h2>
+                        <p>
+                            Subscribe to our newsletter to get notification about new updates, information, discount,
+                            etc..
+                        </p>
+                        <form class="subscribe-form">
+                            <input class="subscribe-form-text" placeholder="Your email" type="text">
+                            <button><i class="fa fa-paper-plane"></i></button>
+                            <section class="clear-fix"></section>
+                        </form>
+                    </section>
+                </aside>
+                <section class="clear-fix"></section>
+
+            </section>
+
+
+
+        </section>
     </section>
-
-
-
-
-
 
 
     <footer class="footer">
 
     </footer>
+    <script>
+        function showMenu() {
+            var menu = document.getElementById('menu');
+            if (menu.className === "header-menu") {
+                menu.className += " show"
+            } else {
+                menu.className = "header-menu"
+            }
+        }
+    </script>
 </body>
 
 </html>
