--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <section class="clear-fix"></section>
             </nav>
         </header>
-        <section class="content">
 
+        <section class="content">
             <section class="intro-h-600px">
                 <section class="intro-row intro-h-2-3 mb-10x">
                     <section class="intro-2-3-col intro-h-100 position-relative h-md-300px">
@@ -216,24 +216,9 @@
                         </section>
                         <section class="clear-fix"></section>
                     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </main>
 
                 <aside class="sidebar">
-
                     <section class="sidebar-item">
                         <ul class="sidebar-list">
                             <li><b>1 BTC = $13,2323</b></li>
@@ -244,7 +229,6 @@
                             <li><b>1 BTC = $13,2323</b></li>
                         </ul>
                     </section>
-
                     <section class="sidebar-item">
                         <h2 class="title">
                             POPULAR POSTS
@@ -329,16 +313,6 @@
                             </section>
                             <div class="clear-fix"></div>
                         </section>
-
-
-
-
-
-
-
-
-
-
                     </section>
 
                     <section class="sidebar-item">
@@ -357,18 +331,94 @@
                     </section>
                 </aside>
                 <section class="clear-fix"></section>
-
             </section>
-
-
 
         </section>
     </section>
 
-
     <footer class="footer">
-
+        <section class="app bg-map">
+            <section class="footer-row">
+                <section class="footer-col">
+                    <img src="images/logo-white.png" class="footer-logo" alt="">
+                    <section class="clear-fix"></section>
+                    <p class="footer-p">
+                        Bit coin is an open-source, peer-to-peer, digital decentralized cryptocurrency. Powered by
+                        blockchain technology, its defining characteristic is
+                    </p>
+                    <p class="footer-p footer-p-padding-20px">
+                        Copyright ©2022 All rights reserved | This template is made with
+                        <i class="icon-heart" aria-hidden="true"></i>
+                        by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                    </p>
+                </section>
+                <section class="footer-col">
+                    <h3 class="footer-section-title">
+                        MOST POPULAR
+                    </h3>
+                    <section class="footer-section-link-item">
+                        <a href="#">Its Make or Break Time for Bitcoin</a>
+                        <p>Jan 25, 2021</p>
+                    </section>
+                    <section class="footer-line"></section>
+                    <section class="footer-section-link-item">
+                        <a href="#">Its Make or Break Time for Bitcoin</a>
+                        <p>Jan 25, 2021</p>
+                    </section>
+                </section>
+                <section class="footer-col">
+                    <h3 class="footer-section-title">
+                        MOST POPULAR
+                    </h3>
+                    <section class="footer-section-link-item">
+                        <a href="#">Its Make or Break Time for Bitcoin</a>
+                        <p>Jan 25, 2021</p>
+                    </section>
+                    <section class="footer-line"></section>
+                    <section class="footer-section-link-item">
+                        <a href="#">Its Make or Break Time for Bitcoin</a>
+                        <p>Jan 25, 2021</p>
+                    </section>
+                </section>
+                <section class="clear-fix"></section>
+            </section>
+            <section class="footer-line"></section>
+            <section class="footer-row">
+                <ul class="footer-menu">
+                    <li>
+                        <a href="#">Terms & Conditions</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy policy</a>
+                    </li>
+                    <li>
+                        <a href="#">Jobs advertising</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact us</a>
+                    </li>
+                </ul>
+                <!-- <section class="clear-fix"></section> -->
+                <ul class="footer-social-network">
+                    <li>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-bitcoin"></i></a>
+                    </li>
+                </ul>
+                <!-- <section class="clear-fix"></section> -->
+            </section>
+        </section>
+        <section class="clear-fix"></section>
     </footer>
+
     <script>
         function showMenu() {
             var menu = document.getElementById('menu');
